@@ -111,6 +111,13 @@ static Uint8 ftdos_detect[] =
     0x04, 0xa2, 0x06, 0x85, 0x01, 0x8e, 0x53, 0x04, 0xa9, 0xac, 0x8d, 0xfe, 0xff, 0xa9, 0x04, 0x8d,
   };
 
+static Uint8 ftdos_master_detect[] =
+  {
+    0xfb, 0xea, 0x78, 0xa9, 0x7f, 0x8d, 0x0e, 0x03, 0xa9, 0x01, 0x8d, 0xfa, 0x03, 0xa9, 0x00, 0x8d,
+    0xfb, 0x03, 0x85, 0x04, 0x85, 0x01, 0x8d, 0xf4, 0x03, 0xa9, 0xab, 0x8d, 0xfe, 0xff, 0xa9, 0x04,
+    0x8d, 0xff, 0xff, 0x8d, 0x39, 0x04, 0x8d, 0x48, 0x04, 0x8d, 0x66, 0x04, 0xa9, 0x03, 0x85, 0x02,
+  };
+
 int detect_image_type(char *filename)
 {
   FILE *f;
@@ -215,6 +222,9 @@ int detect_image_type(char *filename)
         return IMG_TELESTRAT_DISK;
 
       if (memcmp(ptr, ftdos_detect, sizeof(ftdos_detect))==0)
+        return IMG_ATMOS_JASMIN;
+
+      if (memcmp(ptr, ftdos_master_detect, sizeof(ftdos_master_detect))==0)
         return IMG_ATMOS_JASMIN;
     }
 
